change thebridge title to OpenFn

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="the_bridge">
 <head>
-  <title>TheBridge</title>
+  <title>OpenFn</title>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
