--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,18 +20,18 @@
             <%= link_to "Marketplace", "/#/product-search" %>
           </li>
           <li>
-            <%= link_to "Integrations - maps", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+            <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+          </li>
+          <li>
+            <%= link_to "Ideas", "/#/release-notes" %>
           </li>
           <% if current_user.admin? %>
             <li>
-              <%= link_to "Metrics", "/#/metrics/organisation" %>
+              <%= link_to <span class="glyphicon glyphicon-stats">, "/#/metrics/organisation" %>
             </li>
           <% end %>
           <li>
-            <%= link_to "Release Notes", "/#/release-notes" %>
-          </li>
-          <li>
-            <%= link_to "Settings", edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" %>
+            <%= link_to <span class="glyphicon glyphicon-cog">, edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" %>
           </li>
           <li>
             <%= link_to "Logout", :logout, method: :post %>
