--- a/app/views/products/success.xml.erb
+++ b/app/views/products/success.xml.erb
@@ -2,7 +2,7 @@
    <soapenv:Header/>
    <soapenv:Body>
       <out:notificationsResponse>
-         <out:Ack>?</out:Ack>
+         <out:Ack>true</out:Ack>
       </out:notificationsResponse>
    </soapenv:Body>
 </soapenv:Envelope>
