syntax change for logout link

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -38,7 +38,7 @@
               <% end %>
           </li>
           <li>
-            <%= link_to "Logout", :logout, method: :post do %>
+            <%= link_to "Logout", method: :post do %>
               <span class="glyphicon glyphicon-log-out">
               <% end %>
           </li>
