--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/#/welcome">OpenFn</a>
+      <a class="navbar-brand" href="/#/welcome">Open[Fn]</a>
       <!-- <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a> -->
     </div>
 
