--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/#/product-search">OpenFn</a>
+      <a class="navbar-brand" href="/#/marketplace">OpenFn</a>
       <!-- <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a> -->
     </div>
 
@@ -17,7 +17,7 @@
       <% if current_user %>
         <ul class="nav navbar-nav">
           <li>
-            <%= link_to "Marketplace", "/#/product-search" %>
+            <%= link_to "Marketplace", "/#/marketplace" %>
           </li>
           <li>
             <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
