Changed cursor for tabs

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -127,6 +127,12 @@
   .nav-tabs {
     margin-bottom: 0;
     border-bottom: 0;
+
+    li {
+      cursor: pointer;
+
+      .active { cursor: default; }
+    }
   }
 
   .tab-pane {
