--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,36 +14,45 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-      <% if current_user %>
-        <ul class="nav navbar-nav">
-          <li>
-            <%= link_to "Marketplace", "/#/marketplace" %>
-          </li>
+      <ul class="nav navbar-nav">
+        <li>
+          <%= link_to "Marketplace", "/#/marketplace" %>
+        </li>
+        <% if current_user %>
           <li>
             <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
           </li>
-          <li>
-            <%= link_to "Ideas", "/#/release-notes" %>
-          </li>
-          <% if current_user.admin? %>
+        <% end %>
+        <li>
+          <%= link_to "Ideas", "/#/release-notes" %>
+        </li>
+          <% if current_user && current_user.admin? %>
             <li>
               <%= link_to "/#/metrics/organisation" do %>
                 <span class="glyphicon glyphicon-stats">
                 <% end %>
             </li>
           <% end %>
+        <% if current_user %>
           <li>
             <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
               <span class="glyphicon glyphicon-cog">
               <% end %>
           </li>
           <li>
-            <%= link_to "logout", method: :post do %>
+            <%= link_to "/logout", method: :post do %>
               <span class="glyphicon glyphicon-log-out">
               <% end %>
           </li>
-        </ul>
-      <% end %>
+        <% end %>
+        <% unless current_user %>
+          <li>
+            <%= link_to "/login", method: :get do %>
+              <span class="glyphicon glyphicon-log-in">
+              <% end %>
+          </li>
+        <% end %>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
