--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -9,7 +9,7 @@
       <div class="form-group">
         <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'Number of surveys to import' %>
       </div>
-      <%= submit_tag "Import", class: "btn btn-success #{@mapping.enabled? ? '' : 'disabled'}" %>
+      <%= submit_tag "Import", class: "import-button btn btn-success #{@mapping.enabled? ? '' : 'disabled'}" %>
     <% end %>
   </div>
 </div>
