Added linebreak to error and 20px padding between status options in mappings edit and new

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -119,3 +119,10 @@ input.destroy-field {
 }
 
 
+#errorExplanation {
+  li { width: 500px; }
+}
+
+.mapping-status-options {
+  label { padding-right: 20px; }
+}
