New landing page from designs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,10 @@
+@import "font-awesome";
 @import "bootstrap";
 @import "bootstrap_overrides";
+@import "breakpoint";
+@import "functions";
+@import "base";
+@import "buttons";
 @import "mappings";
 @import "mapping_fields";
 @import "odk_fields";
@@ -10,4 +15,4 @@
 @import "metrics";
 @import "home";
 @import "product";
-@import "one-page-wonder";
+@import "welcome";
