--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,17 +5,14 @@
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
 </head>
   <body>
-    <%= render "shared/header" %>
+      <%= render "shared/header" %>
     
-    <div class='container'>
-      <div class='col-md-12'>
-    </div>
+      <div ng-view>
+        <!--  Angular views get rendered here  -->
+      </div>
     
-    <div ng-view>
-      <!--  Angular views get rendered here  -->
-    </div>
   </body>
 </html>
