--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,57 +1,57 @@
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">Open[Fn]</a>
-      <!-- <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a> -->
-    </div>
+<div class="container">
+  <nav class="navbar navbar-default" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Open[Fn]</a>
+        <!-- <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a> -->
+      </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-      <ul class="nav navbar-nav">
-        <li>
-          <%= link_to "Marketplace", "/#/marketplace" %>
-        </li>
-        
-        <li>
-          <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
-        </li>
-        <li>
-          <%= link_to "Ideas", "/#/release-notes" %>
-        </li>
-          <% if current_user && current_user.admin? %>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to "Marketplace", "/#/marketplace" %>
+          </li>
+          
+          <li>
+            <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+          </li>
+          <li>
+            <%= link_to "Ideas", "/#/release-notes" %>
+          </li>
+            <% if current_user && current_user.admin? %>
+              <li>
+                <%= link_to "/#/metrics/organisation" do %>
+                  <span class="glyphicon glyphicon-stats">
+                  <% end %>
+              </li>
+            <% end %>
+          <% if current_user %>
             <li>
-              <%= link_to "/#/metrics/organisation" do %>
-                <span class="glyphicon glyphicon-stats">
+              <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
+                <span class="glyphicon glyphicon-cog">
+                <% end %>
+            </li>
+            <li>
+              <%= link_to "/logout", method: :post do %>
+                <span class="glyphicon glyphicon-log-out">
                 <% end %>
             </li>
           <% end %>
-        <% if current_user %>
-          <li>
-            <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
-              <span class="glyphicon glyphicon-cog">
+          <% unless current_user %>
+            <li>
+              <%= link_to "/login", method: :get do %>
+                <i class="fa fa-lock"></i>
               <% end %>
-          </li>
-          <li>
-            <%= link_to "/logout", method: :post do %>
-              <span class="glyphicon glyphicon-log-out">
-              <% end %>
-          </li>
-        <% end %>
-        <% unless current_user %>
-          <li>
-            <%= link_to "/login", method: :get do %>
-              <span class="glyphicon glyphicon-log-in">
-              <% end %>
-          </li>
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+            </li>
+          <% end %>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+  </nav>
+</div>
