--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -6,16 +6,22 @@
   </ul>
 <% end %>
 
+<%#
+
 <ol class="breadcrumb">
   <li>Mappings</li>
 </ol>
 
+%>
+
 <table class='table table-striped'>
   <thead>
     <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
+      <th>No.</th>
+      <th>Description</th>
+      <th>Status</th>
+      <th>Auto-fetch</th>
+      <th>Commands</th>
     </tr>
   </thead>
   <tbody>
