lots of new ui td

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -42,7 +42,7 @@
     height: 14em;
 
     .product:hover {
-      background-color: #D4EBF6;
+      background-color: #5A6C77;
     }
 
     .product {
