--- a/app/views/mappings/_mapping.html.erb
+++ b/app/views/mappings/_mapping.html.erb
@@ -19,8 +19,8 @@
   </td>
   <td>
 
-    <%= link_to "View", mapping, class: 'btn btn-success' %>
-    <%= link_to "Process Log", [mapping, :submissions], class: 'btn btn-warning' if mapping.import %>
+    <%= link_to "View", mapping, class: 'btn btn-primary' %>
+    <%= link_to "Process Log", [mapping, :submissions], class: 'btn btn-info' if mapping.import %>
     <%= link_to "Destroy", mapping, method: 'delete', class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this map?'} %>
   </td>
 </tr>
