--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -2,7 +2,7 @@
   <!-- Full Width Image Header -->
   <header class="header-image">
     <div class="headline">
-      <h3>Mapping Edit </h3>
+      <h1>open<strong>Integrations</strong> Map Editor</h1>
     </div>
   </header>
 
