--- a/app/views/metrics/index.html.erb
+++ b/app/views/metrics/index.html.erb
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html ng-app="the_bridge">
 <head>
@@ -8,13 +9,19 @@
 </head>
   <body>
     <%= render "shared/header" %>
-    
+-->    
     <div class='container'>
       <div class='col-md-12'>
     </div>
     
-    <div ng-view>
-      <!--  Angular views get rendered here  -->
+    <div class='container'>
+      <div ng-view>
+        <!--  Angular views get rendered here  -->
+      </div>
     </div>
+  
+
+<!--
   </body>
 </html>
+-->
