--- a/app/views/mappings/new.html.erb
+++ b/app/views/mappings/new.html.erb
@@ -1,9 +1,4 @@
-<ol class="breadcrumb">
-  <li><%= link_to "Mappings", :mappings %></li>
-  <li>New</li>
-</ol>
-
-<h3>Create a new mapping</h3>
+<h3>Create a new map</h3>
 
 <div ng-app="the_bridge">
   <%= render 'loading' %>
