--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -2,6 +2,9 @@
 //   padding-left: 0px;
 //   padding-right: 0px;
 //   padding-top: 0px;
+//   padding-bottom: 0px;
+//   margin-right: 0px;
+//   margin-left: 0px;
 // }
 
 // .panel-body {
