--- a/app/assets/stylesheets/mapping_fields.css.scss
+++ b/app/assets/stylesheets/mapping_fields.css.scss
@@ -36,7 +36,20 @@
 .list-group {
   .list-group-item {
     display: inline-block;
-    margin: 0 5px 0 5px;
+    margin: 0 5px 5px 5px;
     padding: 5px 10px;
+
+    border-radius: 0 !important;
+
+    .required {
+      background-color: #D9534F;
+      width: 3px;
+      position: absolute;
+      float: left;
+      top: 0;
+      left: 0;
+      bottom: 0;
+    }
+
   }
 }
