--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -4,6 +4,8 @@
         margin-top: -20px;
         width: 100%;
         text-align: center;
+        background-color: $bg-color;
+        background-image: image-url("noise.png");
     }
 
     .headline {
