--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,3 +1,4 @@
+$new-bg-color: #3f5666;
 $bg-color: #fffcf4;
 $bold: 700;
 $semi-bold: 600;
@@ -27,6 +28,7 @@ b, strong {
 
 .navbar {
   margin-top: rem-calc(55px);
+
 
   border: none;
   border-radius: 0;
