--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+table {
+  color: $off-white;
+}
+
+
 #loading  {
   width: 100%;
 
