--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 @import "breakpoint";
 @import "functions";
 @import "base";
+@import "users";
 @import "buttons";
 @import "mappings";
 @import "mapping_fields";
