--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.paypal-button {
+  margin: 0 auto;
+  display: block;
+
+  text-align: center;
+
+  table {
+    margin: 1rem auto;
+  }
+}
