--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,7 @@
   <div class="row">
 
     <div class="col-md-6">
+      <h3>Edit Your Settings</h3>
       <%= form_for @user, role: 'form' do |f| %>
         <div class="form-group">
           <%= f.label :email %>
@@ -21,24 +22,61 @@
     </div>
 
     <div class="col-md-6">
-<form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="<%= ENV['PAYPAL_BUTTON_ID'] %>">
-<input type="hidden" name="custom" value="<%= @user.id %>">
-<table>
-<tr><td><input type="hidden" name="on0" value="Credits">Credits</td></tr><tr><td><select name="os0">
-	<option value="10 (6 Months)">10 (6 Months) $50.00 USD</option>
-	<option value="25 (6 Months)">25 (6 Months) $75.00 USD</option>
-	<option value="100 (6 Months)">100 (6 Months) $125.00 USD</option>
-</select> </td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+      <h3>Credits</h3>
+      <div class="row">
+        <div class="col-md-6 text-center">
+          <h1><%= @user.credits %></h1>
+          <h4>Credits</h4>
+        </div>
+        <div class="col-md-6 text-center">
+          <h1><%= @user.mappings.enabled.count %></h1>
+          <h4>Enabled Mappings</h4>
+        </div>
+        
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col-md-6">
+          <div class="paypal-button">
+            <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="<%= ENV['PAYPAL_BUTTON_ID'] %>">
+            <input type="hidden" name="custom" value="<%= @user.id %>">
+            <table>
+              <tr>
+                <td>
+                    <input type="hidden" name="on0" value="Credits">
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <select name="os0" class="form-control">
+                    <option value="6 Months">6 Months $50.00 USD</option>
+                    <option value="12 Months">12 Months $75.00 USD</option>
+                  </select>
+                </td>
+              </tr>
+            </table>
+            <input type="hidden" name="currency_code" value="USD">
+            <br/>
+            <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+          </div>
+          
+        </div>
+        <div class="col-md-6">
+          <p>A Credit allows you to enabled a chosen mapping for a given length
+          of time.</p> 
+          
+          <p>To purchase more credits, please select the length of the
+          credit and click the "Buy Now" button.</p> 
 
-
-      
+          <p>On the following page you
+          may enter the amount of credits you wish to purchase.</p>
+          
+        </div>
+      </div>
     </div>
 
   </div>
