--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -19,7 +19,7 @@
   <%= button_to "Destroy", @mapping, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this map?' } %>
   <%= link_to "View Cursor", '#', class: 'btn btn-primary', data: {toggle: 'modal', target: '#cursor_modal'} if @mapping.import && @mapping.import.cursor %>
   <%= button_to "Clear Cursor", [:clear_cursor, @mapping], class: 'btn btn-warning', data: { confirm: 'Are you sure you want to clear the cursor? If the cursor is cleared, the worker will attempt to import all records in your source database, starting back at the beginning.' } %>
-  <%= button_to "Clone", [:clone, @mapping], class: 'btn btn-success', confirm: 'Are you sure?' %>
+  <%#= button_to "Clone", [:clone, @mapping], class: 'btn btn-success', confirm: 'Are you sure?' %>
 </div>
 
 <%= render "cursor_modal", mapping: @mapping if @mapping.import && @mapping.import.cursor %>
