added datetime to mapping index, changed color

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -47,3 +47,11 @@ b, strong {
     color: $primary-blue;
   }
 }
+
+.table-striped {
+  background-color: $new-bg-color;
+}
+
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+   background-color: $deeper-blue;
+}
