--- a/app/views/submissions/_submission.html.erb
+++ b/app/views/submissions/_submission.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <th><%= submission.uuid %></th>
+  <th><%= submission.created_at %></th>
   <th><%= submission.state %></th>
   <th>
     <%= link_to "View", [@mapping, submission], class: 'btn btn-primary' %>
