--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,57 +1,74 @@
 <div class="container">
-  <nav class="navbar navbar-default" role="navigation">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">Open[Fn]</a>
-        <!-- <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a> -->
-      </div>
-
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <%= link_to "Marketplace", "/#/marketplace" %>
-          </li>
-          
-          <li>
-            <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
-          </li>
-          <li>
-            <%= link_to "Ideas", "/#/release-notes" %>
-          </li>
-            <% if current_user && current_user.admin? %>
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Open[Fn]</a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
               <li>
-                <%= link_to "/#/metrics/organisation" do %>
-                  <span class="glyphicon glyphicon-stats">
-                  <% end %>
+                <%= link_to "Marketplace", "/#/marketplace" %>
               </li>
-            <% end %>
-          <% if current_user %>
-            <li>
-              <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
-                <span class="glyphicon glyphicon-cog">
-                <% end %>
-            </li>
-            <li>
-              <%= link_to "/logout", method: :post do %>
-                <span class="glyphicon glyphicon-log-out">
-                <% end %>
-            </li>
-          <% end %>
-          <% unless current_user %>
-            <li>
-              <%= link_to "/login", method: :get do %>
-                <i class="fa fa-lock"></i>
+              <li>
+                <%= link_to "Integrations", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ideas <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li>
+                    <a href="#">Case studies (soon)</a>
+                  </li>
+                  <li>
+                    <a href="#">Reviews (soon)</a>
+                  </li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to "Ideas", "/#/release-notes" %>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+            
+            <% if current_user %>
+              
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  
+                    <li>
+                      <%= link_to edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" do %>
+                        Settings
+                      <% end %>
+                    </li>
+                    <li>
+                      <a href="#">Connected Apps (soon)</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                      <%= link_to "/logout", method: :post do %>
+                        Log out
+                      <% end %>
+                    </li>
+                  </ul>
               <% end %>
-            </li>
-          <% end %>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-  </nav>
-</div>
+                
+              <% unless current_user %>
+                    <li>
+                        <%= link_to "/login", method: :get do %><button type="button" class="btn btn-default navbar-btn">Log in</button><% end %>
+                    </li>
+                    <li>
+                        <%= link_to "/signup", method: :get do %>
+                          <button type="button" class="btn btn-success navbar-btn">Sign up</button>
+                        <% end %>
+                    </li>
+                  <% end %>
+          </div>
+
+        </nav>
+      </div>
