fix navbar button

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -60,11 +60,11 @@
                 
               <% unless current_user %>
                     <li>
-                        <%= link_to "/login", method: :get do %><button type="button" class="btn btn-default navbar-btn">Log in</button><% end %>
+                        <%= link_to "/login", method: :get do %><button type="button" class="btn btn-default">Log in</button><% end %>
                     </li>
                     <li>
                         <%= link_to "/signup", method: :get do %>
-                          <button type="button" class="btn btn-success navbar-btn">Sign up</button>
+                          <button type="button" class="btn btn-success">Sign up</button>
                         <% end %>
                     </li>
                   <% end %>
