--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-      <nav class="navbar navbar-default navbar-fixed-top">
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -28,7 +28,7 @@
                   </li>
                   <li class="divider"></li>
                   <li>
-                    <%= link_to "Ideas", "/#/release-notes" %>
+                    <%= link_to "Release Notes", "/#/release-notes" %>
                   </li>
                 </ul>
               </li>
