--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -3,13 +3,78 @@
 <header class="header-image">
   <div class="headline">
     <h1>open<strong>Integrations</strong></h1>
-    <%= button_to "New Mapping", [:new, :mapping], class: 'btn btn-success' %>
     </div>
 </header>
 
   <div class="featurette dark">
     <hr class="light">
     <hr class="dark">
+    <br>
+    
+    <div class="container">
+   
+    <div class="row">
+
+        <div class="col-md-2 text-center"><br>
+          <%= button_to "Create new map", [:new, :mapping], class: 'btn btn-success' %>
+        </div>
+        <div class="col-md-2 text-center">
+          <div class="content">
+            Subscription Tier:
+          </div>
+          <h4 class="title">
+            Small
+          </h4>
+          <div class="content">
+            $29/mo.
+          </div>
+        </div>
+        <div class="col-md-3 text-center">
+          <div class="content">
+            Active:
+          </div><br>
+          <div class="progress">
+            <div class="progress-bar " role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%;">
+              1/3
+            </div>
+          </div>
+          <div class="content">
+            0/3 auto-fetch
+          </div>
+        </div>
+        <div class="col-md-4 text-center">
+          <div class="content">
+            Submissions:
+          </div><br>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100" style="width: 83%;">
+              83%
+            </div>
+          </div>
+          <div class="content">
+            (834 of 1,000/mo.)
+          </div>
+        </div>
+        <!-- <div class="col-md-3">
+          <div class="form-group">
+              <label class="control-label">Change Tier:</label>
+              <div class="input-group">
+                <select class="form-control">
+                  <option>Micro, 1(100), $10/mo.</option>
+                  <option>Small, 3(1000), $29/mo.</option>
+                  <option>Medium, 5(2000), $59/mo.</option>
+                  <option>Large, 10(10,000), $100/mo.</option>
+                </select>
+                <span class="input-group-btn">
+                  <button class="btn btn-primary" type="button">Go!</button>
+                </span>
+              </div>
+            </div>
+          </div> -->
+      </div>
+    </div>
+
+    <br>  
 
     <div class="container-fluid">
       <table class='table'>
