--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -6,7 +6,7 @@
     </div>
 </header>
 
-  <div class="featurette dark">
+  <div class="featurette mappings">
     <hr class="light">
     <hr class="dark">
     <br>
