--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,6 +6,8 @@
         margin-top: -20px;
         width: 100%;
         text-align: center;
+        background-color: $cream;
+        background-image: image-url("noise.png");
     }
 
     .headline {
@@ -20,6 +22,9 @@
     }
 
     .featurette {
+
+      background-color: $cream;
+      background-image: image-url("noise.png");
 
       .featurette-heading {
         font-size: rem-calc(35px);
