--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -68,3 +68,7 @@ b, strong {
 .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
    background-color: $deeper-blue;
 }
+
+.well {
+  color: $deeper-blue;
+}
