--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -1,3 +1,5 @@
+</div>
+</div>
 <div class="ideas">
 
 <header class="header-image">
@@ -76,15 +78,16 @@
 
     <br>  
 
-    <div class="container-fluid">
+    <div class="container">
       <table class='table'>
         <thead>
           <tr>
             <th>No.</th>
-            <th>Description</th>
-            <th>Status</th>
-            <th>Auto-fetch</th>
-            <th>Commands</th>
+            <th>Label</th>
+            <th>Enabled?</th>
+            <th>Auto collect?</th>
+            <th>History</th>
+            <th>Destroy</th>
           </tr>
         </thead>
         <tbody>
