--- a/app/views/mappings/_mapping.html.erb
+++ b/app/views/mappings/_mapping.html.erb
@@ -1,27 +1,37 @@
-<tr class="<% if mapping.active? %> success <% end %>">
+<!-- <tr class="<% if mapping.active? %> success <% end %>"> -->
+<tr>  
   <td><%=mapping.id %></td>
-  <td><%= mapping.name %></td>
+  <td>
+    <%= link_to mapping, class: "btn btn-meh" do %><%=mapping.name %><% end %>
+  </td>
   
-  <td>
+  <td class="<% if mapping.enabled? %> success <% end %>">
     <% if mapping.enabled? %>
-      enabled
+      <i class="fa fa-check-circle fa-lg"></i>
     <% else %>
-      disabled
+      
     <% end %>
   </td>
 
-  <td>
+  <td class="<% if mapping.active? %> success <% end %>">
     <% if mapping.active? %>
-      active
+      <i class="fa fa-check-circle fa-lg"></i>
     <% else %>
-      inactive
+      
     <% end %>
   </td>
   <td>
+    <% if mapping.import %>
+      <%= link_to [mapping, :submissions], class: 'btn btn-meh' do %>
+        <i class="fa fa-history fa-lg"></i>
+      <% end%>
+    <% end%>
+  </td>
 
-    <%= link_to "View", mapping, class: 'btn btn-default' %>
-    <%= link_to "Process Log", [mapping, :submissions], class: 'btn btn-info' if mapping.import %>
-    <%= link_to "Process Log", [mapping, :submissions], class: 'btn btn-info disabled' if !mapping.import %>
-    <%= link_to "Destroy", mapping, method: 'delete', class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this map?'} %>
+  <td>
+    <%= link_to mapping, method: 'delete', class: 'btn btn-meh', data: { confirm: 'Are you sure you want to delete this map?'} do %>
+      <i class="fa fa-trash-o fa-lg"></i>
+    <% end %>
+
   </td>
 </tr>
