--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -33,7 +33,7 @@
       }
       &.dark {
         background-color: $deeper-blue;
-        background-image: image-url("lighter-noise.png");
+        background-image: image-url("noise.png");
 
         .featurette-heading {
           color: $off-white;
