--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -38,7 +38,8 @@ table {
 
 .odk-row {
   padding-bottom: 150px;
-  background-color: $new-bg-color;
+  //background-color: $bg-color;
+
 
   .odk-fields {
     max-height: 400px;
