--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,44 +1,18 @@
-  <div class="row">
-
-    <div class="col-md-6">
-      <h3>Edit Your Settings</h3>
-      <%= form_for @user, role: 'form' do |f| %>
-        <div class="form-group">
-          <%= f.label :email %>
-          <%= f.text_field :email, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :password %>
-          <%= f.password_field :password, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, class: 'form-control' %>
-        </div>
-      <%= f.submit "Update", class: 'btn btn-primary' %>
-      <% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h3>Account</h3>
+    <div class="col-md-6 text-center">
+      <h1><%= @user.credits %></h1>
+      <h4>Credits</h4>
     </div>
-
-    <div class="col-md-6">
-      <h3>Credits</h3>
-      <div class="row">
-        <div class="col-md-6 text-center">
-          <h1><%= @user.credits %></h1>
-          <h4>Credits</h4>
-        </div>
-        <div class="col-md-6 text-center">
-          <h1><%= @user.mappings.enabled.count %></h1>
-          <h4>Enabled Mappings</h4>
-        </div>
-        
-      </div>
-      <hr />
-      <div class="row">
-        <div class="col-md-6">
-          <div class="paypal-button">
-            <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
+    <div class="col-md-6 text-center">
+      <h1><%= @user.mappings.enabled.count %></h1>
+      <h4>Enabled Mappings</h4>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="paypal-button">
+          <form action="<%= ENV['PAYPAL_URI'] %>" method="post" target="_top">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="<%= ENV['PAYPAL_BUTTON_ID'] %>">
             <input type="hidden" name="custom" value="<%= @user.id %>">
@@ -61,31 +35,46 @@
             <br/>
             <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
             <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-            </form>
-          </div>
-          
+          </form>
         </div>
-        <div class="col-md-6">
-          <p>A Credit allows you to enabled a chosen mapping for a given length
-          of time.</p> 
-          
-          <p>To purchase more credits, please select the length of the
-          credit and click the "Buy Now" button.</p> 
-
-          <p>On the following page you
-          may enter the amount of credits you wish to purchase.</p>
-          
+        <div class="col-md-12"><br>
+          <p>Purchase credits for either 6 or 12 months at a time. After clicking "buy now" you'll be asked to specify the quantity. Each credit allows a single mapping to be enabled.</p> 
+          <p>We are shortly shifting to a more user-friendly payment system. Please bear with us in the interim!</p>    
         </div>
       </div>
     </div>
-
   </div>
+</div>
 
-  <div class="row">
-    <hr />
-    
-    <div class="col-md-6">
+<div class="row">
+</br>
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for @user, role: 'form' do |f| %>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.text_field :email, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+      <%= f.submit "Update", class: 'btn btn-primary' %>
+      <% end %>
+    <hr/>
+      </div>
+</div>
+</div>
 
+<!-- <div class="col-md-12 text-center"> -->
+  <!-- <h3>Connected Apps</h3> -->
+<!-- </div> -->
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
       <%= form_for @user, role: 'form' do |f| %>
       <h3>ODK Credentials</h3>
       <div class="form-group">
@@ -104,9 +93,11 @@
       </div>
       <%= f.submit "Update", class: 'btn btn-primary' %>
       <% end %>
-    </div>
+      </div>
+</div>
 
-    <div class="col-md-6">
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
       <%= form_for @user, role: 'form' do |f| %>
       <h3>Salesforce Credentials</h3>
       <div class="form-group">
@@ -142,9 +133,3 @@
       <% end %>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-md-6">
-    </div>
-  </div>
-</div>
