padding top header

--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -3,7 +3,7 @@
   <!-- Full Width Image Header -->
   <header class="header-image">
     <div class="headline">
-      <h1>open<strong>Integrations</strong> Mapper</h1>
+      <h1><strong>Map</strong> maker</h1>
     </div>
   </header>
 
