headers and glyphs

--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -4,7 +4,9 @@
 
 <header class="header-image">
   <div class="headline">
-    <h1>open<strong>Integrations</strong></h1>
+    <h1><i class="fa fa-connectdevelop"></i>
+ open<strong>Integrations</strong></h1>
+    <h3>Your apps are <strong>better</strong> together.</h3>
     </div>
 </header>
 
