--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -3,7 +3,8 @@
   <!-- Full Width Image Header -->
   <header class="header-image">
     <div class="headline">
-      <h1><strong>Map</strong> maker</h1>
+      <h1><i class="fa fa-connectdevelop"></i> open<strong>Mapper</strong></h1>
+      <h3>No code;<strong> seamless</strong> data integration at your fingertips.</h3>
     </div>
   </header>
 
