--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,10 +1,20 @@
-<% content_for :sidebar do %>
-  <ul class="list-group">
-    <li class="list-group-item">
-      <%= link_to "New Mapping", [:new, :mapping] %>
-    </li>
-  </ul>
-<% end %>
+</div>
+</div>
+<div class="ideas">
+
+<header class="header-image">
+  <div class="headline">
+    <h1><i class="fa fa-connectdevelop"></i>
+ open<strong>Integrations</strong></h1>
+    <h3>Your apps are <strong>better</strong> together.</h3>
+    </div>
+</header>
+
+  <div class="featurette mappings">
+    <hr class="light">
+    <hr class="dark">
+    
+    <div class="container">
 
 <ol class="breadcrumb">
   <li><%= link_to "Mappings", :mappings %></li>
@@ -14,11 +24,14 @@
 
 <%= form_tag [@mapping, :submissions], method: 'get', role: 'form', class: 'form-inline' do %>
   <div class="form-group">
-    <%= label_tag :state %>
-    <%= select_tag :state, options_for_select([[''], ["Successful", :success], ["Error", :error]], params[:state]), class: 'form-control' %>
+    Filter history by status:&nbsp;
+
+<!-- Hi Stu, why can't I set the options for select default option to: "All", :succcess OR :error] ???? -->
+
+    <%= select_tag :state, options_for_select([["",], ["Successful", :success], ["Error", :error]], params[:state]), class: 'form-control' %>
   </div>
 
-   <%= submit_tag "Search", class: 'btn btn-primary' %>
+   <%= submit_tag "Search", class: 'btn btn-default' %>
 <% end %>
 
 <hr />
@@ -26,10 +39,11 @@
 <table class='table table-striped'>
   <thead>
     <tr>
-      <th>UUID</th>
-      <th>DateTime</th>
-      <th>State</th>
-      <th></th>
+      <th>Submission ID</th>
+      <th>When</th>
+      <th>Status</th>
+      <th>Inspect</th>
+      <th>Try again</th>
     </tr>
   </thead>
   <tbody>
