--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,16 +1,26 @@
-<% content_for :sidebar do %>
-  <ul class="list-group">
-    <li class="list-group-item">
-      <%= link_to "New Mapping", [:new, :mapping] %>
-    </li>
-  </ul>
-<% end %>
+</div>
+</div>
+<div class="ideas">
+
+<header class="header-image">
+  <div class="headline">
+    <h1><i class="fa fa-connectdevelop"></i>
+ open<strong>Integrations</strong></h1>
+    <h3>Your apps are <strong>better</strong> together.</h3>
+    </div>
+</header>
+
+  <div class="featurette mappings">
+    <hr class="light">
+    <hr class="dark">
+    
+    <div class="container">
 
 <ol class="breadcrumb">
   <li><%= link_to "Mappings", :mappings %></li>
   <li><%= link_to @mapping.name, @mapping %></li>
   <li><%= link_to "Submissions", [@mapping, :submissions] %></li>
-  <li>Submission for: <%= @submission.uuid %></li>
+  <li>Submission <%= @submission.uuid %></li>
 </ol>
 
 <%= link_to "Reprocess", [:reprocess, @mapping, @submission], class: 'btn btn-danger pull-right', method: 'post', confirm: 'Are you sure?' if @submission.error? %>
