--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,29 @@
+</div>
+<div class="ideas">
+<header class="header-image">
+  <div class="headline">
+
+<% if current_user %>
+
+  <h1><i class="fa fa-user"></i> your <strong>Account</strong></h1>
+  <h3>Manage credentials and add <strong>credits</strong>.</h3>
+  
+<% else %>
+
+  <h1><i class="fa fa-user"></i> create <strong>Account</strong></h1>
+  <h3>Go ahead and <strong>start mapping</strong> for free. Seriously.</h3>
+
+<% end %>
+
+  </div>
+</header>
+
+
+
+<div class="featurette dark">
+  <hr class="light">
+    <hr class="dark">
+    <br>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     
@@ -12,6 +38,9 @@
       </div>
       <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body"> -->
+
+<% if current_user %> 
+
         <div class="col-md-6 text-center">
           <h1><%= @user.credits %></h1>
           <h4>Credits</h4>
@@ -55,12 +84,15 @@
           </div>
         </div>
 
+<% end %>
+
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Settings
+                  Settings &nbsp;&nbsp; <i class="fa fa-cog"></i>
+
                 </a>
               </h4>
             </div>
@@ -79,7 +111,12 @@
                     <%= f.label :password_confirmation %>
                     <%= f.password_field :password_confirmation, class: 'form-control' %>
                   </div>
-                <%= f.submit "Update", class: 'btn btn-primary' %>
+                  <% if current_user %>
+                    <%= f.submit "Update", class: 'btn btn-primary' %>
+                  <% else %>
+                    <%= f.submit "Sign up", class: 'btn btn-success' %>
+                  <% end %>
+
               <% end %>
           </div>
         </div>
@@ -89,7 +126,7 @@
           <h4 class="panel-title">
             <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               <%= form_for @user, role: 'form' do |f| %>
-              ODK Credentials
+              Open Data Kit &nbsp;&nbsp; <i class="fa fa-wrench"></i>
             </a>
           </h4>
         </div>
@@ -119,7 +156,7 @@
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             <%= form_for @user, role: 'form' do |f| %>
-            Salesforce Credentials
+            Salesforce.com &nbsp;&nbsp; <i class="fa fa-wrench"></i>
         </a>
       </h4>
     </div>
